logs/dag_id=spaceX_project/run_id=scheduled__2024-07-09T000000+0000/task_id=load_charachteristics/attempt=12.log
[2024-07-10T11:39:55.011+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-10T11:39:55.045+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: spaceX_project.load_charachteristics scheduled__2024-07-09T00:00:00+00:00 [queued]>
[2024-07-10T11:39:55.056+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: spaceX_project.load_charachteristics scheduled__2024-07-09T00:00:00+00:00 [queued]>
[2024-07-10T11:39:55.058+0000] {taskinstance.py:2306} INFO - Starting attempt 12 of 15
[2024-07-10T11:39:55.073+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): load_charachteristics> on 2024-07-09 00:00:00+00:00
[2024-07-10T11:39:55.081+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=613) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-07-10T11:39:55.083+0000] {standard_task_runner.py:63} INFO - Started process 615 to run task
[2024-07-10T11:39:55.083+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'spaceX_project', 'load_charachteristics', 'scheduled__2024-07-09T00:00:00+00:00', '--job-id', '572', '--raw', '--subdir', 'DAGS_FOLDER/dag.py', '--cfg-path', '/tmp/tmpa2kjwjrj']
[2024-07-10T11:39:55.086+0000] {standard_task_runner.py:91} INFO - Job 572: Subtask load_charachteristics
[2024-07-10T11:39:55.136+0000] {task_command.py:426} INFO - Running <TaskInstance: spaceX_project.load_charachteristics scheduled__2024-07-09T00:00:00+00:00 [running]> on host afe5e479c9b4
[2024-07-10T11:40:42.018+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='rustam' AIRFLOW_CTX_DAG_ID='spaceX_project' AIRFLOW_CTX_TASK_ID='load_charachteristics' AIRFLOW_CTX_EXECUTION_DATE='2024-07-09T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='12' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-07-09T00:00:00+00:00'
[2024-07-10T11:40:42.026+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-07-10T11:40:42.082+0000] {sql.py:276} INFO - Executing: 
            \copy charachteristics FROM '/opt/***/dags/charachteristics.csv' WITH (FORMAT csv, HEADER true, DELIMITER ',', ENCODING 'UTF8');
        
[2024-07-10T11:40:42.139+0000] {base.py:84} INFO - Using connection ID 'cosmos' for task execution.
[2024-07-10T11:40:42.260+0000] {base.py:84} INFO - Using connection ID 'cosmos' for task execution.
[2024-07-10T11:40:42.328+0000] {sql.py:487} INFO - Running statement: 
            \copy charachteristics FROM '/opt/***/dags/charachteristics.csv' WITH (FORMAT csv, HEADER true, DELIMITER ',', ENCODING 'UTF8');
        , parameters: None
[2024-07-10T11:40:42.330+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-07-10T11:40:42.335+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "\"
LINE 2:             \copy charachteristics FROM '/opt/***/dags/c...
                    ^

[2024-07-10T11:40:42.722+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=spaceX_project, task_id=load_charachteristics, run_id=scheduled__2024-07-09T00:00:00+00:00, execution_date=20240709T000000, start_date=20240710T113955, end_date=20240710T114042
[2024-07-10T11:40:43.803+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 572 for task load_charachteristics (syntax error at or near "\"
LINE 2:             \copy charachteristics FROM '/opt/***/dags/c...
                    ^
; 615)
[2024-07-10T11:40:43.901+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-07-10T11:40:44.063+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-07-10T11:40:44.069+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
